--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Olx.uz</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body class="bg-dark">
+<%- include("parts/header.ejs") %>
     <div class="full-page mt-4 ">
         <nav class="navbar navbar-light  container" style="background-color: rgb(250, 205, 4)" >
             <div class="container-fluid">
@@ -14,7 +6,7 @@
               <div class="d-flex">
                 <a class="nav-link active text-dark fw-bolder fs-6 me-3"  href="#">Home</a>
                 <a class="nav-link active  text-dark fw-bold me-3" href="#">About</a>
-                <a class="btn-outline-dark btn me-3" href="#">E'lon berish</a>
+                <a class="btn-outline-dark btn me-3" href="#"></a>
                 
                 <button class="btn btn-outline-dark me-2" type="button">Sign In</button>
                 
@@ -123,9 +115,9 @@
 						<h3>Newsletter Subscribe</h3>
 					</div>
 					<div class="newsletter-form mb--30  mt-3">
-						<form action="./php/mail.php">
+						<form >
 							<input type="email" class="form-control" placeholder="Enter Your Email Address Here...">
-							<button class="btn btn-outline-primary mt-2 text-light w-100">Subscribe</button>
+							<button class="btn btn btn-outline-warning mt-2 text-light w-100">Subscribe</button>
 						</form>
 					</div>
 				
