--- a/views/parts/login.ejs
+++ b/views/parts/login.ejs
@@ -1,35 +1,40 @@
-
-<div class="login">
-    <div class="container">
-        <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb--30 mb-lg--0">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Olx.uz</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body class="bg-dark">
+<div class="login" >
+    <div  class="container text-light d-flex justify-content-center align-items-center flex-direction-column " style="height:100vh;width:40vw;" >
+        
             <!-- Login Form s-->
-            <form action="#">
-                <div class="login-form">
-                    <h4 class="login-title">New Customer</h4>
+            <form >
+                
+                    <h4 class="login-title h1" style="color:rgb(199, 187, 17)">New Customer</h4>
                     <p><span class="font-weight-bold">I am a new customer</span></p>
                     <div class="row">
-                        <div class="col-md-12 col-12 mb--15">
-                            <label for="email">Full Name</label>
-                            <input class="mb-0 form-control" type="text" id="name"
+                        
+                            <label class="my-2 fs-4 " for="email">Full Name</label>
+                            <input required class="mb-0 form-control col-10" type="text" name="name" id="name"
                                 placeholder="Enter your full name">
-                        </div>
-                        <div class="col-12 mb--20">
-                            <label for="email">Email</label>
-                            <input class="mb-0 form-control" type="email" id="email" placeholder="Enter Your Email Address Here..">
-                        </div>
-                        <div class="col-lg-6 mb--20">
-                            <label for="password">Password</label>
-                            <input class="mb-0 form-control" type="password" id="password" placeholder="Enter your password">
-                        </div>
-                        <div class="col-lg-6 mb--20">
-                            <label for="password">Repeat Password</label>
-                            <input class="mb-0 form-control" type="password" id="repeat-password" placeholder="Repeat your password">
-                        </div>
-                        <div class="col-md-12">
-                            <a href="#" class="btn btn-outlined">Register</a>
-                        </div>
-                    </div>
-                </div>
+                        
+                        
+                            <label class="my-2 fs-4"  for="email">Email</label>
+                            <input required class="mb-0 form-control col-10" type="email"name="email" id="email" placeholder="Enter Your Email Address Here..">
+                        
+                        
+                            <label class="my-2 fs-4"  for="password">Password</label>
+                            <input required class="mb-0 form-control col-10" name="password" type="password" id="password" placeholder="Enter your password">
+                        
+                     
+                        
+                            <button href="#" class="btn btn-outline-warning mt-3 fw-800 col-12">Register</button>
+                        
+                    
+                
             </form>
         </div>
     </div>
