--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -7,3 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-dark">
+
+    <div class="full-page mt-4 ">
+        <nav class="navbar navbar-light  container" style="background-color: rgb(250, 205, 4)" >
+            <div class="container-fluid">
+                <a  class="  h1  p-3 fw-bolder bg-dark" style="color:yellow">Olx</a>
+              <div class="d-flex">
+                <a class="nav-link active text-dark fw-bolder fs-6 me-3"  href="#">Home</a>
+                <a class="nav-link active  text-dark fw-bold me-3" href="#">About</a>
+                <a class="btn-outline-dark btn me-3" href="#">E'lon berish</a>
+                
+                <a href="/views/reg.ejs" class="btn btn-outline-dark me-2" >Sign up</a>
+                
+            </div></div>
+          </nav>
+    </div>
