--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -13,11 +13,11 @@
             <div class="container-fluid">
                 <a  class="  h1  p-3 fw-bolder bg-dark" style="color:yellow">Olx</a>
               <div class="d-flex">
-                <a class="nav-link active text-dark fw-bolder fs-6 me-3"  href="#">Home</a>
-                <a class="nav-link active  text-dark fw-bold me-3" href="#">About</a>
+                <a href="/" class="nav-link active text-dark fw-bolder fs-6 me-3"  >Home</a>
+                <a class="nav-link active  text-dark fw-bold me-3" href="../about">About</a>
                 <a class="btn-outline-dark btn me-3" href="#">E'lon berish</a>
                 
-                <a href="/views/reg.ejs" class="btn btn-outline-dark me-2" >Sign up</a>
+                <a href="../login" class="btn btn-outline-dark me-2" >Sign up</a>
                 
             </div></div>
           </nav>
