--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <div  class="container text-light d-flex justify-content-center align-items-center flex-direction-column " style="height:100vh;width:40vw;" >
         
             <!-- Login Form s-->
-            <form method="POST"  >
+            <form method="POST" action="/login" >
                 
                     <h4 class="login-title h1" style="color:rgb(199, 187, 17)">Welcome  Costumer</h4>
                     <p><span class="font-weight-bold">I am a returning customer</span></p>
