--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,12 @@
 <%- include("parts/header") %>
 <% var error  %> 
+
 <div class="login" >
     <div  class="container text-light d-flex justify-content-center align-items-center flex-direction-column " style="height:100vh;width:40vw;" >
         
             <!-- Login Form s-->
-            <form method="POST" action="/login" >
-                
+            <form method="POST"  >
+                <!-- action="/login" -->
                     <h4 class="login-title h1" style="color:rgb(199, 187, 17)">Welcome  Costumer</h4>
                     <p><span class="font-weight-bold">I am a returning customer</span></p>
 
@@ -24,12 +25,12 @@
                             <input required class="mb-0 form-control col-10" type="email"name="email" id="email" placeholder="Enter Your Email Address Here..">
                         
                         
-                            <label class="my-2 fs-4"  for="password">Password</label>
+                            <label class="my-2 mt-4 fs-4"  for="password">Password</label>
                             <input required class="mb-0 form-control col-10"name="password" type="password" id="password" placeholder="Enter your password">
                         
                      
                         
-                            <button  class="btn btn-outline-warning mt-3 fw-800 col-12">Login</button>
+                            <button  class="btn btn-outline-warning mt-4 fw-800 col-12">Login</button>
                             
                             <p class="mt-3">Akkautingiz yo'qmi? Unda <a href="/reg"> ro'yhatdan o'ting</a></p>
                             
