--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -20,7 +20,7 @@
                     <div class="row">
                         
                             <label class="my-2 fs-4 " for="email">Full Name</label>
-                            <input required class="mb-0 form-control col-10" type="text" name="name" id="name"
+                            <input required class="mb-0 form-control col-10" type="text" name="fullname" id="name"
                                 placeholder="Enter your full name">
                         
                         
