--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,46 +6,54 @@
         <div class="container">
             <h2 class="text-center text-light h1  mb-4"> List of ads</h2>
 <ul class="content-list  d-flex justify-content-between align-items-center flex-wrap">
+  <li class="content-item mt-3">
+    <div class="card" style="width: 18rem;">
+        <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Noutbuk kredit uchun</h5>
+          <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
+          <p>Narxi: 10 mln so'm</p> 
+          <!-- // bu yerga ejs da narxi kiritiladi -->
+          <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
+        </div>
+      </div>
+</li>
     <li class="content-item mt-3">
         <div class="card" style="width: 18rem;">
             <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Noutbuk kredit uchun</h5>
+              <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
+              <p>Narxi: 10 mln so'm</p> 
+              <!-- // bu yerga ejs da narxi kiritiladi -->
+              <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
             </div>
           </div>
     </li>
     <li class="content-item mt-3">
-        <div class="card" style="width: 18rem;">
-            <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+      <div class="card" style="width: 18rem;">
+          <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Noutbuk kredit uchun</h5>
+            <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
+            <p>Narxi: 10 mln so'm</p> 
+            <!-- // bu yerga ejs da narxi kiritiladi -->
+            <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
           </div>
-    </li>
-    <li class="content-item mt-3">
-        <div class="card" style="width: 18rem;">
-            <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-    </li>
-    <li class="content-item mt-3">
-        <div class="card" style="width: 18rem;">
-            <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-    </li>
+        </div>
+  </li>
+  <li class="content-item mt-3">
+    <div class="card" style="width: 18rem;">
+        <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Noutbuk kredit uchun</h5>
+          <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
+          <p>Narxi: 10 mln so'm</p> 
+          <!-- // bu yerga ejs da narxi kiritiladi -->
+          <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
+        </div>
+      </div>
+</li>
 </ul>
         </div>
     </div>
