--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -15,7 +15,7 @@
               <div class="d-flex">
                 <a href="/" class="nav-link active text-dark fw-bolder fs-6 me-3"  >Home</a>
                 <a class="nav-link active  text-dark fw-bold me-3" href="../about">About</a>
-                <a class="btn-outline-dark btn me-3" href="#">E'lon berish</a>
+                <a class="btn-outline-dark btn me-3" href="../ads">E'lon berish</a>
                 
                 <a href="../login" class="btn btn-outline-dark me-2" >Sign up</a>
                 
