--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 
 <div class="about" style="padding:50px; margin-top:100px;">
     <div class="container d-flex">
-        <div class="">
+        <div class=" text-justify">
         <p class="text-light  " style="line-height:32px;width:400px;"><a  class="  h1  p-3 fw-bolder bg-dark" style="color:yellow">Olx</a> is the only full go-to-market engine that enables smarter decisions and better outcomes with actionable intelligence in making customer connections. Our platform includes a suite of data-driven products for market intelligence, omnichannel media activation, testing and measurement, enabling brands and agencies to make predictions, improve strategic planning and drive growth on the most important customer channels.
 
         </p>
