--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,62 +1,112 @@
 <%- include("parts/header") %>
+<% var data = data || [] %> 
 
-    
 
-    <div class="content my-3  " style="padding:80px 0px;">
-        <div class="container">
-            <h2 class="text-center text-light h1  mb-4"> List of ads</h2>
-<ul class="content-list  d-flex justify-content-between align-items-center flex-wrap">
-  <li class="content-item mt-3">
-    <div class="card" style="width: 18rem;">
-        <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Noutbuk kredit uchun</h5>
-          <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
-          <p>Narxi: 10 mln so'm</p> 
-          <!-- // bu yerga ejs da narxi kiritiladi -->
-          <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
-        </div>
-      </div>
-</li>
-    <li class="content-item mt-3">
-        <div class="card" style="width: 18rem;">
-            <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Noutbuk kredit uchun</h5>
-              <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
-              <p>Narxi: 10 mln so'm</p> 
-              <!-- // bu yerga ejs da narxi kiritiladi -->
-              <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
-            </div>
-          </div>
-    </li>
-    <li class="content-item mt-3">
-      <div class="card" style="width: 18rem;">
+<div class="content my-3  " style="padding:80px 0px;">
+  <div class="container">
+    <h2 class="text-center text-light h1  mb-4"> List of ads</h2>
+    <ul class="content-list  d-flex justify-content-between align-items-center flex-wrap">
+      <li class="content-item mt-3">
+        <div class="card" style="width: 19rem;">
           <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Noutbuk kredit uchun</h5>
-            <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
-            <p>Narxi: 10 mln so'm</p> 
+            <p class="card-text">Core i7 SSD 256 RAM 16 </p>
+            <p>Narxi: 10 mln so'm</p>
+            <p>Toshkent Olmazor Sebzor 35 A</p>
+
             <!-- // bu yerga ejs da narxi kiritiladi -->
-            <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
+            <div class="d-flex justify-content-between ">
+              <a href="tel:+998931487733" class="btn btn-primary ">+998931487733</a>
+              <p class="text-info ms-2 mt-2">02/12/21 20:00</p>
+            </div>
           </div>
         </div>
-  </li>
-  <li class="content-item mt-3">
-    <div class="card" style="width: 18rem;">
-        <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Noutbuk kredit uchun</h5>
-          <p class="card-text" >Core 7  SSD 256 RAM 16 videoKarta 8 ga teng, 1 yil odin olingan</p>
-          <p>Narxi: 10 mln so'm</p> 
-          <!-- // bu yerga ejs da narxi kiritiladi -->
-          <a href="#" class="btn btn-primary">Batafsil ma'lumot</a>
-        </div>
-      </div>
-</li>
-</ul>
-        </div>
-    </div>
-    
+      </li>
+      <li class="content-item mt-3">
+        <div class="card" style="width: 19rem;">
+          <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Noutbuk kredit uchun</h5>
+            <p class="card-text">Core i7 SSD 256 RAM 16 </p>
+            <p>Narxi: 10 mln so'm</p>
+            <p>Toshkent Olmazor Sebzor 35 A</p>
 
-    <%- include("parts/footer") %>
+            <!-- // bu yerga ejs da narxi kiritiladi -->
+            <div class="d-flex justify-content-between ">
+              <a href="tel:+998931487733" class="btn btn-primary ">+998931487733</a>
+              <p class="text-info ms-2 mt-2">02/12/21 20:00</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+
+      <li class="content-item mt-3">
+        <div class="card" style="width: 19rem;">
+          <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Noutbuk kredit uchun</h5>
+            <p class="card-text">Core i7 SSD 256 RAM 16 </p>
+            <p>Narxi: 10 mln so'm</p>
+            <p>Toshkent Olmazor Sebzor 35 A</p>
+
+            <!-- // bu yerga ejs da narxi kiritiladi -->
+            <div class="d-flex justify-content-between ">
+              <a href="tel:+998931487733" class="btn btn-primary ">+998931487733</a>
+              <p class="text-info ms-2 mt-2">02/12/21 20:00</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="content-item mt-3">
+        <div class="card" style="width: 19rem;">
+          <img src="https://i.postimg.cc/YqFd6KWs/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Noutbuk kredit uchun</h5>
+            <p class="card-text">Core i7 SSD 256 RAM 16 </p>
+            <p>Narxi: 10 mln so'm</p>
+            <p>Toshkent Olmazor Sebzor 35 A</p>
+
+            <!-- // bu yerga ejs da narxi kiritiladi -->
+            <div class="d-flex justify-content-between ">
+              <a href="tel:+998931487733" class="btn btn-primary ">+998931487733</a>
+              <p class="text-info ms-2 mt-2">02/12/21 20:00</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+
+
+
+      <% data.forEach(function(item)  { %>
+      <li class="content-item mt-3">
+        <div class="card" style="width:19rem;">
+          <img src="<%= item.img  %>" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">
+              <%= item.adsName  %>
+            </h5>
+            <p class="card-text">
+              <%= item.adsAbout  %>
+            </p>
+            <p>Narxi: <%= item.price   %> so'm </p>
+            <p><%= item.address  %> </p>
+            <div class="d-flex justify-content-between">
+              <a href="tel:<%= item.number  %> class=" btn btn-primary"><%= item.number  %> </a>
+              <p class="text-info ms-2 mt-2"><%= item.time  %> </p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <% }) %>
+
+    </ul>
+  </div>
+</div>
+
+
+<%- include("parts/footer") %>
