--- a/views/ads.ejs
+++ b/views/ads.ejs
@@ -1,5 +1,5 @@
 <%- include("parts/header")  %> 
-<%- var data %>
+
 
 <div class="ads text-light" style="padding:80px">
     <div class="container ">
@@ -27,7 +27,7 @@
                     
                       <div class="col-sm-6">
                         <label for="Phone number" class="form-label">Phone number</label>
-                        <input type="tel" class="form-control" name='number' id="lastName" placeholder="telephone" value="" required>
+                        <input type="tel" class="form-control" name='number' id="lastName" placeholder="+998931487733" value="" required>
                      
                       </div>
           
