--- a/views/ads.ejs
+++ b/views/ads.ejs
@@ -3,23 +3,18 @@
 
 <div class="ads text-light" style="padding:80px">
     <div class="container ">
-        
-
-    
-      
-            
-             
+     
           
               <div class="row  d-flex justify-content-center align-items-center">
                 <h2 class= "text-center" style="color:rgb(250, 205, 4)">Post Ads</h2>
                 
                 <div class="col-md-10 col-lg-10 g-3">
                     
-                  <form class="needs-validation row g-3" enctype="multipart/form-data" novalidate>
+                  <form class="needs-validation row g-3"method="POST" enctype="multipart/form-data" novalidate>
                     
                       <div class="col-sm-6">
                         <label for="adsName" class="form-label">Ads name</label>
-                        <input type="text" class="form-control" placeholder="ads name" name="adsName" id="firstName" placeholder="" value="" required>
+                        <input type="text" class="form-control" placeholder="ads name" name="adsName" id="firstName" placeholder=""  required   />
                       
                       </div>
           
@@ -27,28 +22,28 @@
                     
                       <div class="col-sm-6">
                         <label for="Phone number" class="form-label">Phone number</label>
-                        <input type="tel" class="form-control" name='number' id="lastName" placeholder="+998931487733" value="" required>
+                        <input type="tel" class="form-control" name="number" id="lastName" placeholder="+998931487733" value="" required />
                      
                       </div>
           
           
                       <div class="col-12">
                         <label for="address" class="form-label">Address</label>
-                        <input type="text" name="address" class="form-control" id="address" placeholder="1234 Main St" required>
+                        <input type="text" name="address" class="form-control" id="address" placeholder="1234 Main St" required />
                       
                       </div>
           
                       <div class="col-sm-6">
                         <label for="formFile" class="form-label">Image upload</label>
-                        <input class="form-control" type="file" id="formFile"name="img" required>
+                        <input class="form-control" type="file" id="formFile"name="img" required />
                       </div>
                       <div class="col-sm-6">
                         <label for="number" class="form-label">Price</label>
-                        <input class="form-control" placeholder="Cost" name="price" type="number" id="formFile">
+                        <input class="form-control" placeholder="Cost" name="price" type="number" id="formFile" />
                       </div>
-                      <div class=" col-12">
+                      <div class="col-12">
                         <label for="About" class="form-label">Ads about</label>
-                        <textarea class="form-control"name="adsAbout" >
+                        <textarea class="form-control"name="adsAbout" required />
 
                         </textarea>
                       </div>
