--- a/views/ads.ejs
+++ b/views/ads.ejs
@@ -10,7 +10,7 @@
                 
                 <div class="col-md-10 col-lg-10 g-3">
                     
-                  <form class="needs-validation row g-3"method="POST" enctype="multipart/form-data" novalidate>
+                  <form class="needs-validation row g-3"method="POST" enctype="application/x-www-form-urlencoded" novalidate>
                     
                       <div class="col-sm-6">
                         <label for="adsName" class="form-label">Ads name</label>
