--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,8 +8,8 @@
         </p>
     </div>
     <div class="">
-        <!-- <img  src="http://www.mikiyakobayashi.com/projects/product/yh-e500a/" alt=""> -->
-        <p class="text-danger display-1 ms-4 ps-4 text-center w-100">Bu yerga rasm qo'yiladi</p>
+        <img style="width:625px;margin-left:100px;"  src="https://www.smarthint.co/wp-content/uploads/2019/03/futuro-do-ecommerce.jpg" alt="">
+        <!-- <p class="text-danger display-1 ms-4 ps-4 text-center w-100">Bu yerga rasm qo'yiladi</p> -->
     </div>
     </div>
 </div>
